--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,21 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
+
+load_paths:
+    - _sass
+    
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "pages"
+    values:
+      layout: "default"
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
