setting up custom css and js

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ defaults:
     values:
       layout: "default"
 
+sass:
+  style: :compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
