--- a/_config.yml
+++ b/_config.yml
@@ -34,12 +34,15 @@ load_paths:
     - _sass
     
 defaults:
-  -
-    scope:
+  - scope:
       path: "" # an empty string here means all files in the project
       type: "pages"
     values:
       layout: "default"
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
 
 sass:
   style: :compressed
